test all UIs and fix some align issues.

--- a/src/components/UI/CreateGame/CreateGame.scss
+++ b/src/components/UI/CreateGame/CreateGame.scss
@@ -3,7 +3,7 @@
   background-size: 100% 100%;
   background-repeat: no-repeat;
   position: relative;
-  height: 100%;
+  height: 100vh;
 	display: grid;
 	align-items: center;
 
