--- a/src/components/UI/Popup/Popup.scss
+++ b/src/components/UI/Popup/Popup.scss
@@ -1,5 +1,5 @@
 .Popup {
-  display: grid;
+  display: grid !important;
   align-items: center;
 
   .form {
