--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
 }
 
 .modal-dialog {
-  margin: 0;
+  margin: 0 auto !important;
   max-width: 100%;
 }
 
